added some library

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3003
-MONGO_URI=mongodb+srv://guddu36999:3c092EuV8m481WcK@blogging.1hzqizx.mongodb.net/blogging
+MONGO_URI=mongodb+srv://guddu36999:elMF3nOxNL9UJeT2@blogging.ypzibkg.mongodb.net/blogging
