--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3003
-MONGO_URI=mongodb+srv://guddu36999:elMF3nOxNL9UJeT2@blogging.ypzibkg.mongodb.net/blogging
+# MONGO_URI=mongodb+srv://guddu36999:elMF3nOxNL9UJeT2@blogging.ypzibkg.mongodb.net/blogging
+MONGO_URI=mongodb+srv://atlas-sample-dataset-load-67fdf9146c83c17b1c734914:elMF3nOxNL9UJeT2@blogging.ypzibkg.mongodb.net/?retryWrites=true&w=majority&appName=blogging
