updated theb .env file

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT=3003
-MONGO_URI=mongodb+srv://guddu:elMF3nOxNL9UJeT2@blogging.ypzibkg.mongodb.net/blogging
-# MONGO_URI=mongodb+srv://atlas-sample-dataset-load-67fdf9146c83c17b1c734914:elMF3nOxNL9UJeT2@blogging.ypzibkg.mongodb.net/?retryWrites=true&w=majority&appName=blogging
+MONGO_URL=mongodb://127.0.0.1:27017/blogify
