--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3003
-MONGO_URL=mongodb://127.0.0.1:27017/blogify
+# MONGO_URL=mongodb+srv://guddu36999:3c092EuV8m481WcK@blogging.ypzibkg.mongodb.net/?retryWrites=true&w=majority&appName=blogging 
+MONGO_URL=mongodb+srv://guddu36999:4rS922E1jShfxGEv@cluster0.nefajhc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
